--- a/react/package.json
+++ b/react/package.json
@@ -8,7 +8,8 @@
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.5.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
