--- a/react/package.json
+++ b/react/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "redux": "^4.0.1",
+    "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
